@@ -1,3 +1,7 @@
+2002-03-20  Andreas J. Guelzow <aguelzow@taliesin.ca>
+	
+	* dialog-formula-guru.c : enable `okay'	
+
 2002-03-19  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
 	* dialog-formula-guru.c : rewritten
