@@ -6,6 +6,8 @@ Andreas:
 	* Add merge tool.
 	* Implement setting and changing of tab colors.
 	* Port search/replace dialog.
+	* Reimplementation of function selector.
+	* Rudimentary reimplementation of formula guru.
 
 Jody:
 	* Fix XL import of external function names.
